Fix resolution happening on event loop
This commit makes sure that the resolution of test resources happens
on the blocking executors. Without this, if an exception was thrown
during startup of a test container, then the Netty event loop was
corrupted and the server stopped responding.